# bnuuy

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  bnuuy.toml.dist
migrations/2021-03-30-011345_dogs/: up.sql
src/: bnuuy_config.rs  db.rs  image_sources.rs  instagram.rs  lib.rs  main.rs  schema.rs
src/api/: v1.rs
src/api/v1/: dog.rs
src/db/: dogs.rs
src/image_sources/: instagram.rs
