[package]
name = "bnuuy"
version = "0.1.0"
authors = ["Josh Bicking <me@jibby.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
diesel = { version = "1.4.6", features = ["sqlite"] }
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["diesel_sqlite_pool"]
