[package]
name = "bnuuy"
version = "0.1.0"
authors = ["Josh Bicking <me@jibby.org>"]
edition = "2018"

[[bin]]
name = "bnuuy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.13"
clokwerk = "0.3.3"
diesel = { version = "1.4.6", features = ["sqlite"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
fern = "0.6.0"
log = "0.4.11"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
rocket = "0.4.7"
walkdir = "2.3.2"


[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["diesel_sqlite_pool"]
